--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-ad"></i>
+                        <i class="fas fa-users"></i>
                         <div class="text">Digital Advertising</div>
                         <p>SEO, SEM, SMO, ORM, Lead generation, Social media management, Adward campaign management and PR.</p>
                     </div>
