--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="https://formsubmit.co/rajan.web@protonmail.com" method="POST">
+                    <form action="https://formsubmit.co/tware.astonn@gmail.com" method="POST">
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" placeholder="Name" required>
