--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -252,7 +251,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="https://formsubmit.co/tware.astonn@gmail.com" method="POST">
+                    <form action="https://formsubmit.co/tware.astonn@gmail.com" method="POST" />
                         <div class="fields">
                             <div class="field name">
                                 <input type="text" placeholder="Name" required>
