--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <form action="https://formsubmit.co/tware.astonn@gmail.com" method="POST" />
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" required>
+                                <input type="text" name="name" placeholder="Name" required>
                             </div>
                             <div class="field email">
                                 <input type="email" name="email" placeholder="Email" required>
@@ -264,10 +264,10 @@
                             <input type="text" name="subject" placeholder="Subject" required>
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" name="message" placeholder="Message.." required></textarea>
+                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button-area">
-                            <button type="submit">Send message</button>
+                            <button type="submit">Send Message</button>
                         </div>
                     </form>
                 </div>
