contact me commit

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="text-1">Hello, I'm</div>
                 <div class="text-2">Rajan</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Hire Me</a>
+                <a href="#contact">Hire Me</a>
             </div>
         </div>
     </section>
