--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My Expertise</div>
-                    <p>I'm skilled in customer service, social media management, copy writing, strategic planning, business development, brand awareness and marketing strategy thanks to my 5+ years of experience in the creative field. Besides, I'm a psychosocial counselor, who practices Cognitive Behavioral Therapy(CBT) and also happen to have a knack for open source software. And these are the subjects on which I generally write.</p>
+                    <p>I'm skilled in customer service, social media management, copy writing, strategic planning, business development, brand awareness and marketing strategy thanks to my 5+ years of experience in the creative field. Besides, I'm a psychosocial counselor, who practices Cognitive Behavioral Therapy.</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
