--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">rajan.web@protonmail.com</div>
+                                <div class="sub-title">mail@rajantiwari.com.np</div>
                             </div>
                         </div>
                     </div>
