--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rajan's Webpage</title>
+    <link rel="shortcut icon" type="image/jpg" href="images/fabicon.svg"/>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -277,7 +278,34 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://github.com/twaree">Rajan Tiwari</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+        <div class="grid-container">
+            <!-- fb/insta/github/discord/telegram -->
+            <div class="align-left">
+                <span class="social">
+                    <a class="social-link" href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                </span>
+                <span class="social">
+                    <a class="social-link" href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                </span>
+                <span class="social">
+                    <a class="social-link" href="#" target="_blank"><i class="fab fa-github"></i></a>
+                </span>
+                <span class="social">
+                    <a class="social-link" href="#" target="_blank"><i class="fab fa-discord"></i></a>
+                </span>
+                <span class="social">
+                    <a class="social-link" href="#" target="_blank"><i class="fab fa-telegram-plane"></i></a>
+                </span>
+            </div>
+    
+            <div>
+                <span>
+                    Created By <a href="https://github.com/twaree">Rajan Tiwari</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.
+                </span>
+            </div>
+
+            <div class="empty-div"></div>
+        </div>        
     </footer>
 
     <script src="script.js"></script>
