social links updated.

--- a/index.html
+++ b/index.html
@@ -282,13 +282,13 @@
             <!-- fb/insta/github/discord/telegram -->
             <div class="align-left">
                 <span class="social">
-                    <a class="social-link" href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a class="social-link" href="https://www.facebook.com/tware.aston" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 </span>
                 <span class="social">
-                    <a class="social-link" href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a class="social-link" href="https://www.instagram.com/oniondhi" target="_blank"><i class="fab fa-instagram"></i></a>
                 </span>
                 <span class="social">
-                    <a class="social-link" href="#" target="_blank"><i class="fab fa-github"></i></a>
+                    <a class="social-link" href="https://github.com/twaree" target="_blank"><i class="fab fa-github"></i></a>
                 </span>
                 <span class="social">
                     <a class="social-link" href="#" target="_blank"><i class="fab fa-discord"></i></a>
