linked logo update.

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     <a class="social-link" href="https://github.com/twaree" target="_blank"><i class="fab fa-github"></i></a>
                 </span>
                 <span class="social">
-                    <a class="social-link" href="https://www.linkedin.com/in/rajan-tiwari-34a368145" target="_blank"><i class="fas fa-linkedin-square"></i></a>
+                    <a class="social-link" href="https://www.linkedin.com/in/rajan-tiwari-34a368145" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 </span>
                 <span class="social">
                     <a class="social-link" href="#" target="_blank"><i class="fab fa-telegram-plane"></i></a>
