--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
                 <span class="social">
                     <a class="social-link" href="https://github.com/twaree" target="_blank"><i class="fab fa-github"></i></a>
                 </span>
-                <span class="social">
-                    <a class="social-link" href="https://www.linkedin.com/in/rajan-tiwari-34a368145" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+               <! <span class="social">
+               <!     <a class="social-link" href="https://www.linkedin.com/in/rajan-tiwari-34a368145" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 </span>
                 <span class="social">
                     <a class="social-link" href="#" target="_blank"><i class="fab fa-telegram-plane"></i></a>
