--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <div class="box">
                         <img src="images/profile-7.jpeg" alt="">
                         <div class="text">Mazda Nepal</div>
-                        <p>A Japanese giant rulling the global automobial industry.</p>
+                        <p>A Japanese giant rulling the global automobile industry.</p>
                     </div>
                 </div>
                 <div class="card">
