--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My Expertise</div>
-                    <p>I'm skilled in customer service, social media management, copy writing, strategic planning, business development, brand awareness and marketing strategy thanks to my 5+ years of experience in the creative field. Besides, I'm a psychosocial counselor, who practices Cognitive Behavioral Therapy.</p>
+                    <p>I'm skilled in client service, social media management, copy writing, strategic planning, business development, brand awareness and marketing strategy thanks to my 3+ years of experience in the creative field. Besides, I'm a psychosocial counselor, who practices Cognitive Behavioral Therapy.</p>
                     <a href="#">Read more</a>
                 </div>
                 <div class="column right">
