--- a/index.html
+++ b/index.html
@@ -228,17 +228,17 @@
                     <p>I am open to paid consulting if you need some kind of expertise I have. If so, do not keep me guessing on what it is, give me a full view of what you need in the initial email and a payment offer.</p>
                     <div class="icons">
                         <div class="row">
-                            <i class="fas fa-user"></i>
+                            <i class="fas fa-phone"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Rajan Tiwari</div>
+                                <div class="sub-title">+977-9846284093</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">Nepal</div>
+                                <div class="sub-title">Kathmandu, Nepal</div>
                             </div>
                         </div>
                         <div class="row">
