--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         <div class="row">
                             <i class="fas fa-phone"></i>
                             <div class="info">
-                                <div class="head">Name</div>
+                                <div class="head">Phone</div>
                                 <div class="sub-title">+977-9846284093</div>
                             </div>
                         </div>
