--- a/index.html
+++ b/index.html
@@ -209,6 +209,13 @@
                 </div>
                 <div class="card">
                     <div class="box">
+                        <img src="images/profile-10.jpeg" alt="">
+                        <div class="text">SkillSewa</div>
+                        <p>Nepal's first home inspection company.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <img src="images/profile-9.jpeg" alt="">
                         <div class="text">K.L.Dugar Group</div>
                         <p>A conglomerate rulling the Nepali market since 1989.</p>
