--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="column right">
                     <div class="text">I'm a <span class="typing-2"></span></div>
                     <p>I'm skilled in client service, social media management, copy writing, strategic planning, business development, brand awareness and marketing strategy thanks to my 3+ years of experience in the creative field. Besides, I'm a psychosocial counselor, who practices Cognitive Behavioral Therapy(CBT) and also happen to have a knack for open source software. And these are the subjects on which I generally write.</p>
-                    <a href="http://0x0.st/oshR.pdf">Download CV</a>
+                    <a href="#">Download CV</a>
                 </div>
             </div>
         </div>
